🔨 update build.gradle
とりまjavafxを依存関係に追加しておいた

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ java {
     }
 }
 
+javafx{
+    version = "21.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'corbivisualizer.App'
